# Percep_Multi

./: .gitignore  CMakeLists.txt  README.md  benchmarks.sh  main.cpp
include/: Extractor.h  Mlp.h  Neurone.h
src/: Extractor.cpp  Mlp.cpp  Neurone.cpp
